// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserStats - Snapshots > matches snapshot with custom className 1`] = `
<div
  class="flex gap-3 items-center custom-stats"
>
  <div
    class="flex flex-col gap-0 items-start"
  >
    <p
      data-class-name="text-xs text-muted-foreground font-medium uppercase tracking-[1.2px] leading-4"
      data-testid="typography"
    >
      Tags
    </p>
    <p
      data-class-name="font-bold leading-5"
      data-size="sm"
      data-testid="typography"
    >
      100
    </p>
  </div>
  <div
    class="flex flex-col gap-0 items-start"
  >
    <p
      data-class-name="text-xs text-muted-foreground font-medium uppercase tracking-[1.2px] leading-4"
      data-testid="typography"
    >
      posts
    </p>
    <p
      data-class-name="font-bold leading-5"
      data-size="sm"
      data-testid="typography"
    >
      50
    </p>
  </div>
</div>
`;

exports[`UserStats - Snapshots > matches snapshot with default props 1`] = `
<div
  class="flex gap-3 items-center"
>
  <div
    class="flex flex-col gap-0 items-start"
  >
    <p
      data-class-name="text-xs text-muted-foreground font-medium uppercase tracking-[1.2px] leading-4"
      data-testid="typography"
    >
      Tags
    </p>
    <p
      data-class-name="font-bold leading-5"
      data-size="sm"
      data-testid="typography"
    >
      761
    </p>
  </div>
  <div
    class="flex flex-col gap-0 items-start"
  >
    <p
      data-class-name="text-xs text-muted-foreground font-medium uppercase tracking-[1.2px] leading-4"
      data-testid="typography"
    >
      posts
    </p>
    <p
      data-class-name="font-bold leading-5"
      data-size="sm"
      data-testid="typography"
    >
      158
    </p>
  </div>
</div>
`;

exports[`UserStats - Snapshots > matches snapshot with zero counts 1`] = `
<div
  class="flex gap-3 items-center"
>
  <div
    class="flex flex-col gap-0 items-start"
  >
    <p
      data-class-name="text-xs text-muted-foreground font-medium uppercase tracking-[1.2px] leading-4"
      data-testid="typography"
    >
      Tags
    </p>
    <p
      data-class-name="font-bold leading-5"
      data-size="sm"
      data-testid="typography"
    >
      0
    </p>
  </div>
  <div
    class="flex flex-col gap-0 items-start"
  >
    <p
      data-class-name="text-xs text-muted-foreground font-medium uppercase tracking-[1.2px] leading-4"
      data-testid="typography"
    >
      posts
    </p>
    <p
      data-class-name="font-bold leading-5"
      data-size="sm"
      data-testid="typography"
    >
      0
    </p>
  </div>
</div>
`;
